@@ -1,1 +1,6 @@
 # vanilla-java
+
+```
+java --enable-preview --source 21 build.java build run
+```
+
